--- a/bit_swift.ipynb
+++ b/bit_swift.ipynb
@@ -885,7 +885,8 @@
       "metadata": {
         "id": "wzYP191ERHI8",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
         "outputId": "58dd3ef0-89a3-4e8c-e8d1-febcac7e43fc"
       },
@@ -968,7 +969,7 @@
         "        \"\"\")\n",
         "}\n"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1033,9 +1034,24 @@
             "[Epoch 13] Training Loss: 0.027, Training Accuracy: 49759/49920 (99.7%), Test Loss: 0.103, Test Accuracy: 9682/10000 (96.8%) seconds per epoch: 276.7\n",
             "[Epoch 14] Training Loss: 0.024, Training Accuracy: 49791/49920 (99.7%), Test Loss: 0.103, Test Accuracy: 9691/10000 (96.9%) seconds per epoch: 276.3\n",
             "[Epoch 15] Training Loss: 0.025, Training Accuracy: 49803/49920 (99.8%), Test Loss: 0.102, Test Accuracy: 9686/10000 (96.9%) seconds per epoch: 277.0\n",
-            "[Epoch 16] Training Loss: 0.023, Training Accuracy: 49815/49920 (99.8%), Test Loss: 0.102, Test Accuracy: 9685/10000 (96.8%) seconds per epoch: 277.9\n"
+            "[Epoch 16] Training Loss: 0.023, Training Accuracy: 49815/49920 (99.8%), Test Loss: 0.102, Test Accuracy: 9685/10000 (96.8%) seconds per epoch: 277.9\n",
+            "[Epoch 17] Training Loss: 0.023, Training Accuracy: 49814/49920 (99.8%), Test Loss: 0.102, Test Accuracy: 9687/10000 (96.9%) seconds per epoch: 274.7\n",
+            "[Epoch 18] Training Loss: 0.023, Training Accuracy: 49803/49920 (99.8%), Test Loss: 0.102, Test Accuracy: 9690/10000 (96.9%) seconds per epoch: 271.9\n",
+            "[Epoch 19] Training Loss: 0.024, Training Accuracy: 49802/49920 (99.8%), Test Loss: 0.102, Test Accuracy: 9690/10000 (96.9%) seconds per epoch: 271.9\n",
+            "[Epoch 20] Training Loss: 0.023, Training Accuracy: 49807/49920 (99.8%), Test Loss: 0.102, Test Accuracy: 9692/10000 (96.9%) seconds per epoch: 271.1\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "",
+          "evalue": "ignored",
+          "traceback": [
+            "Current stack trace:",
+            "\tframe #23: 0x00007fc27fa1dd62 $__lldb_expr78`AD__$s14__lldb_expr_7711BigTransferV14callAsFunctiony10TensorFlow0H0VySfGAHF__vjp_src_0_wrt_1(input=<unavailable>, self=<unavailable>) at <Cell 9>:192",
+            "\tframe #24: 0x00007fc27f69b1cc $__lldb_expr156`partial apply for AD__$s15__lldb_expr_15510TensorFlow0C0VySfG02__a1_B3_7711BigTransferVcfU___vjp_src_0_wrt_0 at <Cell 22>:40:30",
+            "\tframe #34: 0x00007fc27f697216 $__lldb_expr156`main at <Cell 22>:39"
+          ]
         }
       ]
     },
